--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -79,24 +79,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class org.apache.spark.mllib.linalg.SparseVector\n"
+     ]
+    }
+   ],
    "source": [
-    "Coming soon..."
+    "import org.apache.spark.mllib.linalg.{SparseVector, Vector, Vectors}\n",
+    "val sparseV = Vectors.sparse(50, Array(0, 2), Array(1.0, 3.0))\n",
+    "println(sparseV.getClass)"
    ]
   }
  ],
