--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -81,7 +81,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -96,6 +98,219 @@
     "import org.apache.spark.mllib.linalg.{SparseVector, Vector, Vectors}\n",
     "val sparseV = Vectors.sparse(50, Array(0, 2), Array(1.0, 3.0))\n",
     "println(sparseV.getClass)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "# One-vs-All"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import java.util.concurrent.TimeUnit.{NANOSECONDS => NANO}\n",
+    "\n",
+    "import org.apache.spark.{SparkContext, SparkConf}\n",
+    "import org.apache.spark.ml.classification.{OneVsRest, LogisticRegression}\n",
+    "import org.apache.spark.ml.util.MetadataUtils\n",
+    "import org.apache.spark.mllib.evaluation.MulticlassMetrics\n",
+    "import org.apache.spark.mllib.linalg.Vector\n",
+    "import org.apache.spark.sql.DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "val inputData = sqlContext.read.format(\"libsvm\").load(\"iris.scale\")\n",
+    "val data = inputData.randomSplit(Array(0.8, 0.2))\n",
+    "\n",
+    "val Array(train, test) = data.map(_.cache())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- label: double (nullable = false)\n",
+      " |-- features: vector (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "val classifier = new LogisticRegression().setMaxIter(10).setTol(1E-6).setFitIntercept(true)\n",
+    "inputData.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "oneVsRest_6c70a1c26a7e"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val ovr = new OneVsRest()\n",
+    "ovr.setClassifier(classifier)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "val ovrModel = ovr.fit(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+--------------------+----------+\n",
+      "|label|            features|prediction|\n",
+      "+-----+--------------------+----------+\n",
+      "|  0.0|(4,[0,1,2,3],[0.0...|       0.0|\n",
+      "|  0.0|(4,[0,1,2,3],[0.1...|       0.0|\n",
+      "|  0.0|(4,[0,1,2,3],[0.1...|       0.0|\n",
+      "|  0.0|(4,[0,1,2,3],[0.8...|       0.0|\n",
+      "|  0.0|(4,[0,2,3],[0.611...|       0.0|\n",
+      "|  1.0|(4,[0,1,2,3],[-0....|       1.0|\n",
+      "|  1.0|(4,[0,1,2,3],[-0....|       1.0|\n",
+      "|  1.0|(4,[0,1,2,3],[-0....|       1.0|\n",
+      "|  1.0|(4,[0,1,2,3],[-0....|       1.0|\n",
+      "|  2.0|(4,[0,1,2,3],[-0....|       2.0|\n",
+      "|  2.0|(4,[0,1,2,3],[-0....|       2.0|\n",
+      "|  2.0|(4,[0,1,2,3],[-0....|       2.0|\n",
+      "|  0.0|(4,[0,1,2,3],[-0....|       0.0|\n",
+      "|  0.0|(4,[0,1,2,3],[-1....|       0.0|\n",
+      "|  0.0|(4,[0,1,2,3],[0.3...|       0.0|\n",
+      "|  0.0|(4,[0,1,2,3],[0.8...|       0.0|\n",
+      "|  0.0|(4,[0,2,3],[0.222...|       0.0|\n",
+      "|  1.0|(4,[0,1,2,3],[-0....|       1.0|\n",
+      "|  1.0|(4,[0,1,2,3],[-0....|       1.0|\n",
+      "|  1.0|(4,[0,2,3],[-0.77...|       1.0|\n",
+      "|  2.0|(4,[0,1,2,3],[-0....|       2.0|\n",
+      "|  2.0|(4,[0,1,2,3],[-0....|       2.0|\n",
+      "|  2.0|(4,[0,1,2,3],[-0....|       2.0|\n",
+      "|  2.0|(4,[0,1,2,3],[-0....|       2.0|\n",
+      "|  2.0|(4,[0,1,2,3],[-1....|       2.0|\n",
+      "|  2.0|(4,[0,1,2,3],[0.1...|       2.0|\n",
+      "|  2.0|(4,[0,1,2,3],[0.3...|       2.0|\n",
+      "+-----+--------------------+----------+\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(4,[0,1,2,3],[0.0555554,0.166667,0.491525,0.833333])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val predictions = ovrModel.transform(test)\n",
+    "val predictionsAndLabels = predictions.select(\"prediction\", \"label\").map(row => (row.getDouble(0), row.getDouble(1)))\n",
+    "predictions.show(100)\n",
+    "predictions.take(1)(0).get(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "val metrics = new MulticlassMetrics(predictionsAndLabels)\n",
+    "val confusionMatrix = metrics.confusionMatrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Confusion Matrix\n",
+      " 10.0  0.0  1.0   \n",
+      "0.0   3.0  0.0   \n",
+      "0.0   0.0  10.0  \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "println(s\" Confusion Matrix\\n ${confusionMatrix.toString}\\n\")"
    ]
   }
  ],
