--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -74,77 +74,42 @@
    "source": [
     "import com.sony.relationmodel.CorpusReader\n",
     "\n",
-    "val docs = CorpusReader.readCorpus(\"/Users/axel/utveckling/prometheus/wikipedia-corpus-herd\", 0.001)(sqlContext, sc)"
+    "val docs = CorpusReader.readCorpus(\"/Users/axel/utveckling/prometheus/wikipedia-corpus-herd\")(sqlContext, sc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
-    "val someDocs = docs.filter(d => d.text().contains(\"Han hade redan på 1970-talet varit kommunalråd för skolfrågor i samma kommun och ordförande i Katrineholms Arbetarkommun.\"))"
+    "val gp = docs.filter(_.uri() == \"urn:wikidata:Q53747\").collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Name: java.lang.UnsupportedOperationException\n",
-       "Message: empty collection\n",
-       "StackTrace: org.apache.spark.rdd.RDD$$anonfun$first$1.apply(RDD.scala:1344)\n",
-       "org.apache.spark.rdd.RDDOperationScope$.withScope(RDDOperationScope.scala:150)\n",
-       "org.apache.spark.rdd.RDDOperationScope$.withScope(RDDOperationScope.scala:111)\n",
-       "org.apache.spark.rdd.RDD.withScope(RDD.scala:316)\n",
-       "org.apache.spark.rdd.RDD.first(RDD.scala:1341)\n",
-       "$line56.$read$$iwC$$iwC$$iwC$$iwC$$iwC$$iwC$$iwC.<init>(<console>:36)\n",
-       "$line56.$read$$iwC$$iwC$$iwC$$iwC$$iwC$$iwC.<init>(<console>:41)\n",
-       "$line56.$read$$iwC$$iwC$$iwC$$iwC$$iwC.<init>(<console>:43)\n",
-       "$line56.$read$$iwC$$iwC$$iwC$$iwC.<init>(<console>:45)\n",
-       "$line56.$read$$iwC$$iwC$$iwC.<init>(<console>:47)\n",
-       "$line56.$read$$iwC$$iwC.<init>(<console>:49)\n",
-       "$line56.$read$$iwC.<init>(<console>:51)\n",
-       "$line56.$read.<init>(<console>:53)\n",
-       "$line56.$read$.<init>(<console>:57)\n",
-       "$line56.$read$.<clinit>(<console>)\n",
-       "$line56.$eval$.<init>(<console>:7)\n",
-       "$line56.$eval$.<clinit>(<console>)\n",
-       "$line56.$eval.$print(<console>)\n",
-       "sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)\n",
-       "sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)\n",
-       "sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)\n",
-       "java.lang.reflect.Method.invoke(Method.java:497)\n",
-       "org.apache.spark.repl.SparkIMain$ReadEvalPrint.call(SparkIMain.scala:1065)\n",
-       "org.apache.spark.repl.SparkIMain$Request.loadAndRun(SparkIMain.scala:1346)\n",
-       "org.apache.spark.repl.SparkIMain.loadAndRunReq$1(SparkIMain.scala:840)\n",
-       "org.apache.spark.repl.SparkIMain.interpret(SparkIMain.scala:871)\n",
-       "org.apache.spark.repl.SparkIMain.interpret(SparkIMain.scala:819)\n",
-       "org.apache.toree.kernel.interpreter.scala.ScalaInterpreter$$anonfun$interpretAddTask$1$$anonfun$apply$3.apply(ScalaInterpreter.scala:361)\n",
-       "org.apache.toree.kernel.interpreter.scala.ScalaInterpreter$$anonfun$interpretAddTask$1$$anonfun$apply$3.apply(ScalaInterpreter.scala:356)\n",
-       "org.apache.toree.global.StreamState$.withStreams(StreamState.scala:81)\n",
-       "org.apache.toree.kernel.interpreter.scala.ScalaInterpreter$$anonfun$interpretAddTask$1.apply(ScalaInterpreter.scala:355)\n",
-       "org.apache.toree.kernel.interpreter.scala.ScalaInterpreter$$anonfun$interpretAddTask$1.apply(ScalaInterpreter.scala:355)\n",
-       "org.apache.toree.utils.TaskManager$$anonfun$add$2$$anon$1.run(TaskManager.scala:140)\n",
-       "java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)\n",
-       "java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)\n",
-       "java.lang.Thread.run(Thread.java:745)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MapPartitionsRDD[31] at filter at <console>:35\n"
+     ]
     }
    ],
    "source": [
-    "println(someDocs.first)"
+    "println(gp)"
    ]
   },
   {
