Add code for chunking

--- a/features.ipynb
+++ b/features.ipynb
@@ -43,7 +43,7 @@
      "text": [
       "Marking se.lth.cs.nlp:docforia:1.0-SNAPSHOT for download\n",
       "Preparing to fetch from:\n",
-      "-> file:/var/folders/x9/cvvmdcld0szc31byy1ns_vfr0000gn/T/toree_add_deps3452640159197034219/\n",
+      "-> file:/var/folders/x9/cvvmdcld0szc31byy1ns_vfr0000gn/T/toree_add_deps2145311932042217219/\n",
       "-> file:/Users/erik/.m2/repository\n",
       "-> https://repo1.maven.org/maven2\n",
       "-> New file at /Users/erik/.m2/repository/se/lth/cs/nlp/docforia/1.0-SNAPSHOT/docforia-1.0-SNAPSHOT.jar\n",
@@ -221,6 +221,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lemma-zation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "List(microtegeus, rugosus, vara, en, kvalsterart, som, beskriva, av, Sandór, Mahunka, 1982, ., microtegeus, rugosus, ingå, i, släkte, Microtegeus, och, familj, Microtegeidae, ., ingen, underart, finnas, lista, i, catalogue, of, life, ., källa, ., (, 2007, ), ,, pdf, ,, Subías, 2007, :, World, Oribatida, catalog, ., Bisby, F, ., a, ., ,, roskov, y, ., r, ., ,, Orrell, T, ., m, ., ,, Nicolson, D, ., ,, Paglinawan, L, ., e, ., ,, Bailly, N, ., ,, Kirk, P, ., m, ., ,, bourgoin, t, ., ,, Baillargeon, G, ., ,, Ouvrard, D, ., (, rida, ., ), (, 1:a, mars, ), ., ”, specie, 2000, &, itis, catalogue, of, life, :, 2011, annual, Checklist, ., ”, ., species, 2000, :, reading, ,, uk, ., http://www.catalogueoflife.org/annual-checklist/2011/search/all/key/microtegeus+rugosus/match/..."
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokens.map(_.getLemma)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
@@ -268,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -279,7 +308,7 @@
        "ArrayBuffer(av <-- PA -- Sandór, beskrevs <-- AG -- av, kvalsterart <-- ET -- beskrevs, är <-- SP -- kvalsterart, rugosus -- SS --> är, Microtegeus -- DT --> rugosus)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +356,7 @@
        "List(Sandór Mahunka, Microtegeus, Microtegeidae, Catalogue of Life, PDF, Catalogue of Life, spindeldjur)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +370,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "val N = NamedEntity.`var`()\n",
+    "val ned = doc.select(N).where(N).coveredBy(tokens(0))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Huvudverbet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chunking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -349,14 +422,47 @@
     {
      "data": {
       "text/plain": [
-       "Microtegeus"
+       "List(Microtegeus, rugosus, är, en, kvalsterart, som, beskrevs, av, Sandór Mahunka, 1982, ., Microtegeus, rugosus, ingår, i, släktet, Microtegeus, och, familjen, Microtegeidae, ., Inga, underarter, finns, listade, i, Catalogue of Life, ., Källor, ., (, 2007, ), ,, PDF, ,, Subías, 2007, :, World, Oribatida, catalog, ., Bisby, F, ., A, ., ,, Roskov, Y, ., R, ., ,, Orrell, T, ., M, ., ,, Nicolson, D, ., ,, Paglinawan, L, ., E, ., ,, Bailly, N, ., ,, Kirk, P, ., M, ., ,, Bourgoin, T, ., ,, Baillargeon, G, ., ,, Ouvrard, D, ., (, red, ., ), (, 1, mars, ), ., ”, Species, 2000, &, ITIS, Catalogue of Life, :, 2011, Annual, Checklist, ., ”, ., Species, 2000, :, Reading, ,, UK, ., http://www.catalogueoflife.org/annual-checklist/2011/search/all/key..."
       ]
      },
-     "execution_count": 1,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "val groups = docs.map(doc => {\n",
+    "    val NED = NamedEntityDisambiguation.`var`()\n",
+    "    val T = Token.`var`()\n",
+    "    val nedGroups = doc.select(NED, T).where(T).coveredBy(NED)\n",
+    "    .stream()\n",
+    "    .collect(QueryCollectors.groupBy(doc, NED).values(T).collector())\n",
+    "    .asScala\n",
+    "    .toList\n",
+    "    \n",
+    "    nedGroups.map(pg => {\n",
+    "        pg.key(NED).getIdentifier\n",
+    "        pg.value(0, T).text\n",
+    "        val values = pg.nodes(T).asScala\n",
+    "        if(values.size > 1){\n",
+    "            val head = values.head\n",
+    "            val last = values.last\n",
+    "            head.setRange(head.getStart, last.getEnd)\n",
+    "            values.tail.foreach(doc.remove)\n",
+    "        }\n",
+    "    })\n",
+    "    doc\n",
+    "}).take(1)\n",
+    "groups(0).nodes(classOf[Token]).asScala.toSeq.toList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   },
   {
@@ -366,18 +472,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "val N = NamedEntity.`var`()\n",
-    "val ned = doc.select(N, ).where(N).coveredBy(tokens(0))\n",
-    "ned.stream().findFirst()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Huvudverbet"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
