--- a/features.ipynb
+++ b/features.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -43,16 +43,16 @@
      "text": [
       "Marking se.lth.cs.nlp:docforia:1.0-SNAPSHOT for download\n",
       "Preparing to fetch from:\n",
-      "-> file:/var/folders/x9/cvvmdcld0szc31byy1ns_vfr0000gn/T/toree_add_deps2145311932042217219/\n",
+      "-> file:/var/folders/x9/cvvmdcld0szc31byy1ns_vfr0000gn/T/toree_add_deps7337860000139500551/\n",
       "-> file:/Users/erik/.m2/repository\n",
       "-> https://repo1.maven.org/maven2\n",
       "-> New file at /Users/erik/.m2/repository/se/lth/cs/nlp/docforia/1.0-SNAPSHOT/docforia-1.0-SNAPSHOT.jar\n",
       "-> New file at /Users/erik/.m2/repository/com/fasterxml/jackson/core/jackson-annotations/2.7.0/jackson-annotations-2.7.0.jar\n",
       "-> New file at /Users/erik/.m2/repository/junit/junit/4.11/junit-4.11.jar\n",
-      "-> New file at /Users/erik/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\n",
+      "-> New file at /Users/erik/.m2/repository/com/fasterxml/jackson/core/jackson-databind/2.7.3/jackson-databind-2.7.3.jar\n",
       "-> New file at /Users/erik/.m2/repository/com/fasterxml/jackson/core/jackson-core/2.7.3/jackson-core-2.7.3.jar\n",
       "-> New file at /Users/erik/.m2/repository/com/google/protobuf/protobuf-java/2.6.1/protobuf-java-2.6.1.jar\n",
-      "-> New file at /Users/erik/.m2/repository/com/fasterxml/jackson/core/jackson-databind/2.7.3/jackson-databind-2.7.3.jar\n",
+      "-> New file at /Users/erik/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\n",
       "-> New file at /Users/erik/.m2/repository/it/unimi/dsi/fastutil/6.3/fastutil-6.3.jar\n"
      ]
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -116,12 +116,12 @@
    },
    "outputs": [],
    "source": [
-    "val docs = readCorpus(\"../../data/wikipedia-corpus-herd/sv/\")(sqlContext, sc)"
+    "val docs = readCorpus(\"../../data/wikipedia-corpus-herd/en/\")(sqlContext, sc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -132,10 +132,10 @@
     {
      "data": {
       "text/plain": [
-       "6205"
+       "21195"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,18 +155,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "val doc = docs.take(1)(0)"
+    "val doc = docs.take(3)(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -174,14 +174,19 @@
     {
      "data": {
       "text/plain": [
-       "Microtegeus rugosus är en kvalsterart som beskrevs av Sandór Mahunka 1982. Microtegeus rugosus ingår i släktet Microtegeus och familjen Microtegeidae. Inga underarter finns listade i Catalogue of Life.\n",
+       "Hamblin Bay is a bay of Lake Mead on the Colorado River, to the east of Las Vegas and Callville Bay in the U.S. state of Nevada. It lies between Sandy Cove which lies to the west and Rotary Cove and Rufus Cove which lie to the east. Hamblin Bay is also a fault of the same name in the vicinity, which \"strikes at a low angle to the easternmost mapped branch of the Las Vegas Shear Zone\".\n",
        "\n",
-       "Källor. (2007) , PDF, Subías 2007: World Oribatida catalog. Bisby F.A., Roskov Y.R., Orrell T.M., Nicolson D., Paglinawan L.E., Bailly N., Kirk P.M., Bourgoin T., Baillargeon G., Ouvrard D. (red.) (1 mars). ”Species 2000 & ITIS Catalogue of Life: 2011 Annual Checklist.”. Species 2000: Reading, UK. http://www.catalogueoflife.org/annual-checklist/2011/search/all/key/microtegeus+rugosus/match/1. Läst 24 september. ITIS: The Integrated Taxonomic Information System. Orrell T. (custodian), 2011-04-26.\n",
+       "Name. It is named after Mormon missionary William Hamblin.\n",
        "\n",
-       "Externa länkar. Wikispecies har information om Microteg..."
+       "References. Geological Survey Professional Paper. U.S. Government Printing Office. 1974. p. 3. American Mining Congress (1977). Proceedings of the First Annual William T. Pecora Memorial Symposium, October 1975, Sioux Falls, South Dakota. U.S. Government Printing Office. p. 259. Carlson, Helen S. (1 January 1974). Nevada Place Names: A Geographical Dictionary. University of Nevada Press. p. 130. ISBN 978-0-87417-094-8.\n",
+       "\n",
+       "External links. Photograph.\n",
+       "\n",
+       "This Nevada state location article is a stub. You can help Wikipedia by expanding it. v. t. e.\n",
+       "\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,18 +197,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output will NOT be truncated\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "List(Microtegeus, rugosus, är, en, kvalsterart, som, beskrevs, av, Sandór, Mahunka, 1982, ., Microtegeus, rugosus, ingår, i, släktet, Microtegeus, och, familjen, Microtegeidae, ., Inga, underarter, finns, listade, i, Catalogue, of, Life, ., Källor, ., (, 2007, ), ,, PDF, ,, Subías, 2007, :, World, Oribatida, catalog, ., Bisby, F, ., A, ., ,, Roskov, Y, ., R, ., ,, Orrell, T, ., M, ., ,, Nicolson, D, ., ,, Paglinawan, L, ., E, ., ,, Bailly, N, ., ,, Kirk, P, ., M, ., ,, Bourgoin, T, ., ,, Baillargeon, G, ., ,, Ouvrard, D, ., (, red, ., ), (, 1, mars, ), ., ”, Species, 2000, &, ITIS, Catalogue, of, Life, :, 2011, Annual, Checklist, ., ”, ., Species, 2000, :, Reading, ,, UK, ., http://www.catalogueoflife.org/annual-checklist/2011/search/all..."
+       "List((Hamblin,0), (Bay,1), (is,2), (a,3), (bay,4), (of,5), (Lake,6), (Mead,7), (on,8), (the,9), (Colorado,10), (River,11), (,,12), (to,13), (the,14), (east,15), (of,16), (Las,17), (Vegas,18), (and,19), (Callville,20), (Bay,21), (in,22), (the,23), (U.S.,24), (state,25), (of,26), (Nevada,27), (.,28), (It,29), (lies,30), (between,31), (Sandy,32), (Cove,33), (which,34), (lies,35), (to,36), (the,37), (west,38), (and,39), (Rotary,40), (Cove,41), (and,42), (Rufus,43), (Cove,44), (which,45), (lie,46), (to,47), (the,48), (east,49), (.,50), (Hamblin,51), (Bay,52), (is,53), (also,54), (a,55), (fault,56), (of,57), (the,58), (same,59), (name,60), (in,61), (the,62), (vicinity,63), (,,64), (which,65), (\",66), (strikes,67), (at,68), (a,69), (low,70), (angle,71), (to,72), (the,73), (easternmost,74), (mapped,75), (branch,76), (of,77), (the,78), (Las,79), (Vegas,80), (Shear,81), (Zone,82), (\",83), (.,84), (Name,85), (.,86), (It,87), (is,88), (named,89), (after,90), (Mormon,91), (missionary,92), (William,93), (Hamblin,94), (.,95), (References,96), (.,97), (Geological,98), (Survey,99), (Professional,100), (Paper,101), (.,102), (U.S.,103), (Government,104), (Printing,105), (Office,106), (.,107), (1974,108), (.,109), (p.,110), (3,111), (.,112), (American,113), (Mining,114), (Congress,115), ((,116), (1977,117), (),118), (.,119), (Proceedings,120), (of,121), (the,122), (First,123), (Annual,124), (William,125), (T.,126), (Pecora,127), (Memorial,128), (Symposium,129), (,,130), (October,131), (1975,132), (,,133), (Sioux,134), (Falls,135), (,,136), (South,137), (Dakota,138), (.,139), (U.S.,140), (Government,141), (Printing,142), (Office,143), (.,144), (p.,145), (259,146), (.,147), (Carlson,148), (,,149), (Helen,150), (S.,151), ((,152), (1,153), (January,154), (1974,155), (),156), (.,157), (Nevada,158), (Place,159), (Names,160), (:,161), (A,162), (Geographical,163), (Dictionary,164), (.,165), (University,166), (of,167), (Nevada,168), (Press,169), (.,170), (p.,171), (130,172), (.,173), (ISBN,174), (978-0-87417-094-8,175), (.,176), (External,177), (links,178), (.,179), (Photograph,180), (.,181), (This,182), (Nevada,183), (state,184), (location,185), (article,186), (is,187), (a,188), (stub,189), (.,190), (You,191), (can,192), (help,193), (Wikipedia,194), (by,195), (expanding,196), (it,197), (.,198), (v.,199), (t.,200), (e.,201))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +229,8 @@
     "val T = Token.`var`()\n",
     "\n",
     "val tokens = doc.nodes(classOf[Token]).asScala.toSeq.toList\n",
-    "tokens"
+    "%Truncation off\n",
+    "tokens.zipWithIndex"
    ]
   },
   {
@@ -229,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -237,10 +250,10 @@
     {
      "data": {
       "text/plain": [
-       "List(microtegeus, rugosus, vara, en, kvalsterart, som, beskriva, av, Sandór, Mahunka, 1982, ., microtegeus, rugosus, ingå, i, släkte, Microtegeus, och, familj, Microtegeidae, ., ingen, underart, finnas, lista, i, catalogue, of, life, ., källa, ., (, 2007, ), ,, pdf, ,, Subías, 2007, :, World, Oribatida, catalog, ., Bisby, F, ., a, ., ,, roskov, y, ., r, ., ,, Orrell, T, ., m, ., ,, Nicolson, D, ., ,, Paglinawan, L, ., e, ., ,, Bailly, N, ., ,, Kirk, P, ., m, ., ,, bourgoin, t, ., ,, Baillargeon, G, ., ,, Ouvrard, D, ., (, rida, ., ), (, 1:a, mars, ), ., ”, specie, 2000, &, itis, catalogue, of, life, :, 2011, annual, Checklist, ., ”, ., species, 2000, :, reading, ,, uk, ., http://www.catalogueoflife.org/annual-checklist/2011/search/all/key/microtegeus+rugosus/match/..."
+       "List(Hamblin, Bay, be, a, bay, of, Lake, Mead, on, the, Colorado, River, ,, to, the, east, of, Las, Vegas, and, Callville, Bay, in, the, U.S., state, of, Nevada, ., it, lie, between, Sandy, Cove, which, lie, to, the, west, and, rotary, cove, and, Rufus, Cove, which, lie, to, the, east, ., Hamblin, Bay, be, also, a, fault, of, the, same, name, in, the, vicinity, ,, which, ``, strike, at, a, low, angle, to, the, easternmost, map, branch, of, the, Las, Vegas, Shear, Zone, '', ., name, ., it, be, name, after, Mormon, missionary, William, Hamblin, ., reference, ., Geological, Survey, Professional, Paper, ., U.S., Government, Printing, Office, ., 1974, ., p., 3, ., american, mining, Congress, -lrb-, 1977, -rrb-, ., Proceedings, of, the, First, annual, William, T., Pecora, Memorial, Symposium, ,, October, 1975, ,, Sioux, Falls, ,, South, Dakota, ., U.S., Government, Printing, Office, ., p., 259, ., Carlson, ,, Helen, S., -lrb-, 1, January, 1974, -rrb-, ., Nevada, Place, Names, :, a, geographical, Dictionary, ., University, of, Nevada, Press, ., p., 130, ., ISBN, 978-0-87417-094-8, ., external, link, ., Photograph, ., this, Nevada, state, location, article, be, a, stub, ., you, can, help, Wikipedia, by, expand, it, ., v., t., e.)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,19 +263,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Depedency Path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "val deps = tokens(1).connectedEdges(classOf[DependencyRelation]).toList.asScala"
+    "val deps = tokens(0).connectedEdges(classOf[DependencyRelation]).toList.asScala"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -270,10 +290,10 @@
     {
      "data": {
       "text/plain": [
-       "ArrayBuffer(Microtegeus -- DT --> rugosus, rugosus -- SS --> är)"
+       "ArrayBuffer(Hamblin -- compound --> Bay)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,20 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "// Create a dependency path between these two entities.\n",
-    "val ent1 = tokens(0)\n",
-    "val ent2 = tokens(8)"
+    "val ent1 = tokens(51)\n",
+    "val ent2 = tokens(79)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -305,10 +325,10 @@
     {
      "data": {
       "text/plain": [
-       "ArrayBuffer(av <-- PA -- Sandór, beskrevs <-- AG -- av, kvalsterart <-- ET -- beskrevs, är <-- SP -- kvalsterart, rugosus -- SS --> är, Microtegeus -- DT --> rugosus)"
+       "ArrayBuffer(Hamblin -- compound --> Bay, Bay -- nsubj --> fault, fault <-- nmod -- name, name <-- acl:relcl -- strikes, strikes <-- nmod -- angle, angle <-- nmod -- branch, branch <-- nmod -- Zone, Las -- compound --> Zone)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +349,7 @@
     "        })\n",
     "    }      \n",
     "}\n",
-    "val path = dfs(ent2, Set(), Seq(), ent1)\n",
+    "val path = dfs(ent1, Set(), Seq(), ent2)\n",
     "path.map(d => (d, d.getHead[Token].getStart < d.getTail[Token].getStart)).map{\n",
     "    case (d, dir) => \n",
     "        if (dir) s\"${d.getHead} <-- ${d.getRelation} -- ${d.getTail}\" else s\"${d.getTail} -- ${d.getRelation} --> ${d.getHead}\" \n",
