Fix pruner removing all positive examples for Swedish

--- a/demo_notebook.ipynb
+++ b/demo_notebook.ipynb
@@ -66,7 +66,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -538,7 +540,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Corpusreader"
    ]
@@ -547,7 +552,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -597,7 +604,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# RelationsReader"
    ]
@@ -606,7 +616,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -629,7 +641,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# FeatureExtractor"
    ]
@@ -638,7 +653,9 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -871,7 +888,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# TrainingDataExtractor"
    ]
@@ -880,7 +900,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1006,7 +1028,9 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1107,25 +1131,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Name: Compile Error\n",
-       "Message: <console>:221: error: class SerializedTrainingSentence cannot be accessed in $iwC\n",
-       "       val rawData = sqlContext.read.parquet(\"/Users/axel/utveckling/prometheus/data/0.1.0-32-g4d0b685/relation_model/en/training_sentences\").as[SerializedTrainingSentence].rdd\n",
-       "                                                                                                                                                 ^\n",
-       "<console>:221: error: Unable to find encoder for type stored in a Dataset.  Primitive types (Int, String, etc) and Product types (case classes) are supported by importing sqlContext.implicits._  Support for serializing other types will be added in future releases.\n",
-       "       val rawData = sqlContext.read.parquet(\"/Users/axel/utveckling/prometheus/data/0.1.0-32-g4d0b685/relation_model/en/training_sentences\").as[SerializedTrainingSentence].rdd\n",
-       "                                                                                                                                                ^\n",
+       "Message: <console>:19: error: not found: type Document\n",
+       "         sentenceDoc: Document,\n",
+       "                      ^\n",
+       "<console>:20: error: not found: type EntityPair\n",
+       "         entityPair: Seq[EntityPair])\n",
+       "                         ^\n",
        "StackTrace: "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,6 +1181,15 @@
     "trainingSentences.printSchema()\n",
     "trainingSentences.take(1)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
