--- a/features.ipynb
+++ b/features.ipynb
@@ -147,7 +147,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "source": [
     "# Dependency Features"
@@ -157,7 +159,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -168,7 +172,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -194,7 +200,9 @@
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -230,7 +238,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Lemma-zation"
    ]
@@ -239,7 +250,9 @@
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -259,7 +272,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Depedency Path"
    ]
@@ -268,7 +284,9 @@
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -279,7 +297,9 @@
    "cell_type": "code",
    "execution_count": 62,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -301,7 +321,9 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -326,7 +348,9 @@
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -365,7 +389,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Depedency Window\n",
     "Gets all tokens connected to an entity through a dependency relation that isn't included in the dependency path."
@@ -375,7 +402,9 @@
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -398,7 +427,9 @@
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -429,7 +460,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## NE tag"
    ]
@@ -438,7 +472,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -463,7 +499,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -472,7 +510,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -482,7 +522,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Huvudverbet"
    ]
@@ -491,14 +534,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Chunking"
    ]
@@ -507,7 +555,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -549,27 +599,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "case class DependencyPath(dependency: String, word: String, direction: java.lang.Boolean)\n",
+    "\n",
+    "case class TrainingDataPoint(\n",
+    "  relationId: String,\n",
+    "  relationName: String,\n",
+    "  relationClass: Long,\n",
+    "  pointType: String,\n",
+    "  wordFeatures: Seq[String],\n",
+    "  posFeatures: Seq[String],\n",
+    "  wordsBetween: Seq[String],\n",
+    "  posBetween: Seq[String],\n",
+    "  ent1PosTags: Seq[String],\n",
+    "  ent2PosTags: Seq[String],\n",
+    "  ent1Type: String,\n",
+    "  ent2Type: String,\n",
+    "  dependencyPath: Seq[DependencyPath],\n",
+    "  ent1DepWindow: Seq[DependencyPath],\n",
+    "  ent2DepWindow: Seq[DependencyPath])"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "val file = \"/Users/axel/utveckling/prometheus/data/wip/relation_model/sv/training_sentences/part-r-00207-4e1f6240-21e9-407f-b1ff-dcc30efd740c.gz.parquet\"\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
