wip: Almost working coreference resolution

--- a/features.ipynb
+++ b/features.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -43,22 +43,22 @@
      "text": [
       "Marking se.lth.cs.nlp:docforia:1.0-SNAPSHOT for download\n",
       "Preparing to fetch from:\n",
-      "-> file:/var/folders/x9/cvvmdcld0szc31byy1ns_vfr0000gn/T/toree_add_deps8024617570925909987/\n",
-      "-> file:/Users/erik/.m2/repository\n",
+      "-> file:/var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8344678845664320834/\n",
+      "-> file:/Users/axel/.m2/repository\n",
       "-> https://repo1.maven.org/maven2\n",
-      "-> New file at /Users/erik/.m2/repository/se/lth/cs/nlp/docforia/1.0-SNAPSHOT/docforia-1.0-SNAPSHOT.jar\n",
-      "-> New file at /Users/erik/.m2/repository/com/fasterxml/jackson/core/jackson-annotations/2.7.0/jackson-annotations-2.7.0.jar\n",
-      "-> New file at /Users/erik/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\n",
-      "-> New file at /Users/erik/.m2/repository/com/fasterxml/jackson/core/jackson-core/2.7.3/jackson-core-2.7.3.jar\n",
-      "-> New file at /Users/erik/.m2/repository/junit/junit/4.11/junit-4.11.jar\n",
-      "-> New file at /Users/erik/.m2/repository/com/google/protobuf/protobuf-java/2.6.1/protobuf-java-2.6.1.jar\n",
-      "-> New file at /Users/erik/.m2/repository/com/fasterxml/jackson/core/jackson-databind/2.7.3/jackson-databind-2.7.3.jar\n",
-      "-> New file at /Users/erik/.m2/repository/it/unimi/dsi/fastutil/6.3/fastutil-6.3.jar\n"
+      "-> New file at /Users/axel/.m2/repository/se/lth/cs/nlp/docforia/1.0-SNAPSHOT/docforia-1.0-SNAPSHOT.jar\n",
+      "-> New file at /Users/axel/.m2/repository/com/fasterxml/jackson/core/jackson-annotations/2.7.0/jackson-annotations-2.7.0.jar\n",
+      "-> New file at /Users/axel/.m2/repository/junit/junit/4.11/junit-4.11.jar\n",
+      "-> New file at /Users/axel/.m2/repository/com/fasterxml/jackson/core/jackson-core/2.7.3/jackson-core-2.7.3.jar\n",
+      "-> New file at /Users/axel/.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar\n",
+      "-> New file at /Users/axel/.m2/repository/com/google/protobuf/protobuf-java/2.6.1/protobuf-java-2.6.1.jar\n",
+      "-> New file at /Users/axel/.m2/repository/com/fasterxml/jackson/core/jackson-databind/2.7.3/jackson-databind-2.7.3.jar\n",
+      "-> New file at /Users/axel/.m2/repository/it/unimi/dsi/fastutil/6.3/fastutil-6.3.jar\n"
      ]
     }
    ],
    "source": [
-    "%AddDeps se.lth.cs.nlp docforia 1.0-SNAPSHOT --transitive --repository file:/Users/erik/.m2/repository"
+    "%AddDeps se.lth.cs.nlp docforia 1.0-SNAPSHOT --transitive --repository file:/Users/axel/.m2/repository"
    ]
   },
   {
@@ -277,7 +277,7 @@
     "editable": true
    },
    "source": [
-    "## Depedency Path"
+    "## Dependency Path"
    ]
   },
   {
@@ -394,7 +394,7 @@
     "editable": true
    },
    "source": [
-    "## Depedency Window\n",
+    "## Dependency Window\n",
     "Gets all tokens connected to an entity through a dependency relation that isn't included in the dependency path."
    ]
   },
@@ -641,12 +641,163 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "source": [
+    "## Coref Resolution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marking org.scalaj:scalaj-http_2.10:2.3.0 for download\n",
+      "Preparing to fetch from:\n",
+      "-> file:/var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8344678845664320834/\n",
+      "-> https://repo1.maven.org/maven2\n",
+      "-> New file at /var/folders/28/5mj8jbrd13z_nssxk35nd25c0000gn/T/toree_add_deps8344678845664320834/https/repo1.maven.org/maven2/org/scalaj/scalaj-http_2.10/2.3.0/scalaj-http_2.10-2.3.0.jar\n"
+     ]
+    }
+   ],
+   "source": [
+    "%AddDeps org.scalaj scalaj-http_2.10 2.3.0 --transitive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "import scalaj.http._\n",
+    "import se.lth.cs.docforia.Document\n",
+    "import se.lth.cs.docforia.memstore.MemoryDocument\n",
+    "import se.lth.cs.docforia.graph.disambig.NamedEntityDisambiguation\n",
+    "import se.lth.cs.docforia.graph.text.{CoreferenceChainEdge, CoreferenceChain, CoreferenceMention, NamedEntity, Sentence, Token}\n",
+    "import se.lth.cs.docforia.memstore.MemoryDocumentIO\n",
+    "import se.lth.cs.docforia.query.{QueryCollectors, StreamUtils}\n",
+    "import scala.collection.JavaConverters._\n",
+    "\n",
+    "\n",
+    "def annotate(input: String, lang: String, conf: String): Either[String, Document] = {\n",
+    "    val CONNECTION_TIMEOUT = 2000\n",
+    "    val READ_TIMEOUT = 10000\n",
+    "    val vildeURL = s\"http://vilde.cs.lth.se:9000/$lang/$conf/api/json\"\n",
+    "    try {\n",
+    "      val response: HttpResponse[String] = Http(vildeURL)\n",
+    "        .timeout(connTimeoutMs = CONNECTION_TIMEOUT, readTimeoutMs = READ_TIMEOUT)\n",
+    "        .postData(input)\n",
+    "        .header(\"content-type\", \"application/json; charset=UTF-8\")\n",
+    "        .asString\n",
+    "\n",
+    "      val docJson = response.body\n",
+    "      Right(MemoryDocumentIO.getInstance().fromJson(docJson))\n",
+    "    } catch {\n",
+    "      case e: java.net.SocketTimeoutException => Left(e.getMessage)\n",
+    "    }\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": [
+    "def resolveCoref(doc: Document): Document = {\n",
+    "    val M = CoreferenceMention.`var`()\n",
+    "    val NED = NamedEntityDisambiguation.`var`()\n",
+    "    val EDGE = CoreferenceChainEdge.`var`()\n",
+    "    val T = Token.`var`()\n",
+    "    \n",
+    "\n",
+    "\n",
+    "    val nedGroups = doc.select(T, M, NED).where(T).coveredBy(M)\n",
+    "      .stream()\n",
+    "      .collect(QueryCollectors.groupBy(doc, M).values(T).collector())\n",
+    "      .asScala\n",
+    "      .map(pg => {\n",
+    "        val what = pg.key().get(M).connectedEdges(classOf[CoreferenceChainEdge]).asScala.toList\n",
+    "        val corefs = what.flatMap(edge => edge.getHead[CoreferenceChain].connectedNodes(classOf[CoreferenceMention]).asScala.toList)\n",
+    "        val thisCoref = pg.key(M)\n",
+    "val ned = corefs.filter(coref => coref.getProperty(\"mention-type\") == \"PROPER\").headOption\n",
+    "        (thisCoref, corefs, ned)\n",
+    "      })\n",
+    "      .toList\n",
+    "    println(nedGroups.mkString(\" \"))\n",
+    "\n",
+    "    doc\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u0000\n",
+      "\u0000\n",
+      "\u0000\n",
+      "(Barack Obama,List(Barack Obama, He, He),\u0000) (He,List(Barack Obama, He, He),\u0000) (He,List(Barack Obama, He, He),\u0000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "val str = \"Barack Obama was a detective married to Michelle. He became the president. He was elected by the majority of the people.\"\n",
+    "val annDoc = annotate(str, \"en\", \"herd\")\n",
+    "annDoc match {\n",
+    "    case Right(doc) => {\n",
+    "        val resolvedDoc = resolveCoref(doc)\n",
+    "    }\n",
+    "    case Left(e) => println(s\"error $e\")\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true,
     "deletable": true,
     "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": []
